--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 	<script src="js/shaders/idle_vs.essl"></script>
 	<script src="js/shaders/solid_fs.essl"></script>
 	<script src="js/Program.js"></script>
+	<script src="js/Material.js"></script>
+	<script src="js/Mesh.js"></script>
+	<script src="js/GameObject.js"></script>
+	<script src="js/OrthoCamera.js"></script>
 	<script src="js/TriangleGeometry.js"></script>
 	<script src="js/Scene.js"></script>
 	<script src="js/App.js"></script>
